--- a/src/CSS/compose.css
+++ b/src/CSS/compose.css
@@ -3,6 +3,8 @@
   bottom: 0;
   right: 70px;
   min-height: 10px 10px 0px 0px;
+  max-height: 800px;
+  min-height: 500px;
   min-width: 500px;
   overflow: hidden;
   box-shadow: 0px 0px 8px rgb(51 51 51/59%);
@@ -51,6 +53,8 @@
 .compose__bodyForm {
   display: flex;
   flex-direction: column;
+  width: 300px;
+  max-height: 500px;
 }
 
 .compose__bodyForm input,
@@ -70,6 +74,8 @@ textarea {
   display: flex;
   justify-content: space-between;
   padding: 12px 10px;
+  position: absolute;
+  bottom: 0;
 }
 
 .compose__footer__Left button {
@@ -105,4 +111,18 @@ textarea {
 .compose__footer__Right svg:hover {
   background-color: #eee;
   color: #000;
+}
+
+.editorClassName {
+  max-width: 500px !important;
+  min-width: 500px !important;
+  max-height: 200px !important;
+}
+
+.public-DraftStyleDefault-block {
+  inline-size: 400px !important;
+  word-wrap: break-word !important;
+}
+.toolbarClassName {
+  width: 500px !important;
 }
